--- a/src/loveStory.css
+++ b/src/loveStory.css
@@ -1,4 +1,4 @@
-.confirm-wrapper {
+.love-wrapper {
     text-align: center;
     display: flex;
     justify-content: center;
@@ -7,11 +7,17 @@
     font-size: 3.5vmin;
 }
 
-.confirm-wrapper span {
+.love-wrapper .strike {
     text-decoration: line-through;
 }
 
-.confirm-wrapper img{
+.love-wrapper img{
     width: 70%;
     margin-bottom: 2em;
+}
+
+.love-wrapper .msg-hover{
+    position:absolute;
+    top: 0.25em;
+
 }
